--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "next": "16.0.3",
     "ogl": "^0.0.88",
+    "posthog-js": "^1.297.2",
+    "posthog-node": "^5.13.2",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
